fix(adminV2) : fixed trumbowyg z-index

--- a/admin/src/main/resources/public/styles/admin.scss
+++ b/admin/src/main/resources/public/styles/admin.scss
@@ -2287,3 +2287,9 @@ div.legend-square.blue {
 div.legend-square.outlined, input.outlined {
   box-shadow: 0px 0px 5px 3px #444;
 }
+
+// Trumbowyg editor
+
+.trumbowyg-box {
+  z-index: 0;
+}
